# anpai

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/anpai/: Cargo.toml
crates/anpai/src/: main.rs
crates/anpai/src/fixtures/dmn/: simpledish.dmn
crates/anpaiutils/: Cargo.toml
crates/anpaiutils/src/: xml.rs
crates/dmn/: Cargo.toml
crates/dmn/src/: eval.rs  lib.rs  parse.rs  types.rs
crates/dmn/src/fixtures/dmn/: simpledish.dmn
crates/feel/: Cargo.toml
crates/feel-core/: Cargo.toml
crates/feel-core/src/: ast.rs  eval.rs  helpers.rs  parse.rs  prelude.rs  scan.rs
crates/feel-core/src/values/: context.rs  func.rs  mod.rs  numeric.rs  range.rs  temporal.rs  value.rs
crates/feel-lang/: Cargo.toml
crates/feel-lang/src/: ast.rs  eval.rs  lib.rs  parse.rs  prelude.rs  scan.rs
crates/feel-lang/src/values/: numeric.rs  range.rs  temporal.rs  value.rs
crates/feel/src/: ast.rs  eval.rs  helpers.rs  lib.rs  main.rs  parse.rs  scan.rs
crates/feel/src/values/: context.rs  mod.rs  numeric.rs  temporal.rs  value.rs
crates/wfkit/: Cargo.toml
crates/wfkit/src/: main.rs
examples/dmn/: simpledish.dmn
src/: ast.rs  commands.rs  eval.rs  helpers.rs  main.rs  parse.rs  prelude.rs  scan.rs  temporal.rs  token.rs  value.rs
src/values/: func.rs  range.rs
