[workspace]
resolver = "2"
members = [
        "crates/feel",
        "crates/dmn",
        "crates/anpai",
        "crates/anpaiutils",
]

[workspace.dependencies]
chrono = {version="0.4.34"}
iso8601 = {version="0.6.1", features = ["chrono"]}
lazy_static = "1.4.0"
regex = "1.10.3"
feel = { path="crates/feel" }
dmn = { path="crates/dmn" }
anpaiutils = { path="crates/anpaiutils" }
clap = { version="4.5.1", features = ["derive"]}
serde = {version = "1.0.197", features = ["derive"] }
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
serde_json = "1.0.114"
